[project]
name = "comfyui-eesahesnodes"
description = "InstantX's Flux union ControlNet loader and implementation"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.30.0"]

[project.urls]
Repository = "https://github.com/EeroHeikkinen/ComfyUI-eesahesNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-eesahesNodes"
Icon = ""
